--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
                 android:layout_height="220dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="50dp"
-                android:src="@drawable/cronulla_with_sun_logo" />
+                android:src="@drawable/cvd_logo_white" />
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -40,6 +40,34 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:id="@+id/llSigIn"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/ivSigin"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/svg_circle_cofee"
+                            android:padding="8dp"
+                            app:tint="@color/white"
+                            android:src="@drawable/ic_svg_signin" />
+
+                        <TextView
+                            android:id="@+id/tvSigin"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:fontFamily="@font/segoe_bold"
+                            android:gravity="center"
+                            android:text="@string/sign_in"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+                    <LinearLayout
                         android:id="@+id/llMembersCard"
 
                         android:layout_width="0dp"
@@ -51,7 +79,6 @@
 
                         <ImageView
                             app:tint="@color/white"
-
                             android:id="@+id/ivMembersCard"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
@@ -70,36 +97,6 @@
                             android:textSize="16sp" />
 
                     </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/llOffers"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/ivOffer"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:background="@drawable/svg_circle_cofee"
-                            android:padding="8dp"
-                            app:tint="@color/white"
-                            android:src="@drawable/svg_offer" />
-
-                        <TextView
-                            android:id="@+id/tvOffer"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:fontFamily="@font/segoe_bold"
-                            android:gravity="center"
-                            android:text="@string/offers"
-                            android:textColor="@color/white"
-                            android:textSize="16sp" />
-                    </LinearLayout>
-
                 </LinearLayout>
 
                 <LinearLayout
@@ -108,6 +105,35 @@
                     android:layout_marginTop="32dp"
                     android:gravity="center"
                     android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:id="@+id/llDining"
+
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/ivDining"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/svg_circle_cofee"
+                            android:padding="8dp"
+                            android:src="@drawable/svg_fork"
+                            app:tint="@color/white" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:fontFamily="@font/segoe_bold"
+                            android:gravity="center"
+                            android:text="@string/dining"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/llWhatson"
@@ -139,6 +165,18 @@
                             android:textSize="16sp" />
 
                     </LinearLayout>
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="32dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
                     <LinearLayout
                         android:id="@+id/llFunction"
                         android:layout_width="0dp"
@@ -170,50 +208,11 @@
                     </LinearLayout>
 
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="32dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-
-                    <LinearLayout
-                        android:id="@+id/llDining"
-
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/ivDining"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:background="@drawable/svg_circle_cofee"
-                            android:padding="8dp"
-                            android:src="@drawable/svg_fork"
-                            app:tint="@color/white" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:fontFamily="@font/segoe_bold"
-                            android:gravity="center"
-                            android:text="@string/dining"
-                            android:textColor="@color/white"
-                            android:textSize="16sp" />
-                    </LinearLayout>
-
 
 
 
                     <LinearLayout
-                        android:id="@+id/llTable"
+                        android:id="@+id/llEntertain"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -222,14 +221,14 @@
 
 
                         <ImageView
-                            android:id="@+id/ivTable"
+                            android:id="@+id/ivEntertainment"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
                             android:background="@drawable/svg_circle_cofee"
                             android:padding="8dp"
                             app:tint="@color/white"
-                            android:src="@drawable/iv_table" />
+                            android:src="@drawable/svg_mic" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -237,7 +236,7 @@
                             android:layout_marginTop="8dp"
                             android:fontFamily="@font/segoe_bold"
                             android:gravity="center"
-                            android:text="@string/table_ordering"
+                            android:text="@string/entertainment"
                             android:textColor="@color/white"
                             android:textSize="16sp" />
 
@@ -251,6 +250,36 @@
                     android:layout_marginTop="32dp"
                     android:gravity="center"
                     android:orientation="horizontal">
+
+
+                    <LinearLayout
+                        android:id="@+id/llMembership"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/ivMembership"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/svg_circle_cofee"
+                            android:padding="8dp"
+                            app:tint="@color/white"
+                            android:src="@drawable/svg_user" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:fontFamily="@font/segoe_bold"
+                            android:gravity="center"
+                            android:text="@string/membership"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+
 
                     <LinearLayout
                         android:id="@+id/llContactUs"
@@ -281,34 +310,6 @@
                             android:textColor="@color/white"
                             android:textSize="16sp" />
 
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/llPickABox"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/ivPickupBox"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:background="@drawable/svg_circle_cofee"
-                            android:padding="8dp"
-                            app:tint="@color/white"
-                            android:src="@drawable/svg_gift" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:fontFamily="@font/segoe_bold"
-                            android:gravity="center"
-                            android:text="@string/pick_a_box"
-                            android:textColor="@color/white"
-                            android:textSize="16sp" />
                     </LinearLayout>
 
 
