--- a/app/src/main/res/layout/activity_welcomeback.xml
+++ b/app/src/main/res/layout/activity_welcomeback.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_blue"
+    android:background="@color/colorPrimaryDark"
 
     android:orientation="vertical">
     
@@ -63,7 +63,7 @@
                     android:paddingStart="12dp"
                     android:text="@string/please_verify_your_identity_to_continue_using_your_device_s_credential"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <LinearLayout
@@ -79,6 +79,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        app:tint="@color/light_blue"
                        android:layout_marginStart="12dp"
                         android:src="@drawable/svg_smile" />
 
@@ -88,6 +89,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                        android:layout_marginStart="12dp"
+                        app:tint="@color/light_blue"
+
+
                         android:src="@drawable/svg_fingerprint" />
 
                     <ImageView
@@ -95,7 +99,8 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                       android:layout_marginStart="12dp"
+                        app:tint="@color/light_blue"
+                        android:layout_marginStart="12dp"
                         android:src="@drawable/svg_password" />
 
                 </LinearLayout>
