--- a/app/src/main/res/layout/fragment_digital_members_card.xml
+++ b/app/src/main/res/layout/fragment_digital_members_card.xml
@@ -81,11 +81,12 @@
                             android:layout_marginEnd="24dp"
                             android:layout_marginBottom="12dp"
                             app:cardBackgroundColor="@color/white"
-                            app:cardCornerRadius="12dp"
+                            app:cardCornerRadius="28dp"
                             app:cardElevation="4dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
+                                android:background="@drawable/card_bg"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical">
 
@@ -97,11 +98,7 @@
                                     android:layout_weight="75"
                                     android:orientation="horizontal">
 
-                                    <ImageView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:scaleType="fitXY"
-                                        android:src="@drawable/card_bg" />
+
 
                                     <ImageView
                                         android:layout_width="match_parent"
@@ -112,13 +109,32 @@
                                         android:layout_width="100dp"
                                         android:layout_height="50dp"
                                         android:layout_alignParentStart="true"
-                                        android:layout_alignParentBottom="true"
+                                        android:layout_alignParentTop="true"
                                         android:layout_marginStart="16dp"
                                         android:layout_marginBottom="8dp"
+                                        android:layout_marginTop="12dp"
                                         android:fontFamily="@font/bebas_kai_regular"
-                                        android:src="@drawable/cronulla_with_sun_logo"
+                                        android:src="@drawable/cvd_logo_white"
                                         android:textColor="@color/white"
                                         android:textSize="22sp" />
+
+
+                                    <TextView
+                                        android:id="@+id/tvYear"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginStart="8dp"
+                                        android:fontFamily="@font/bebas_kai_regular"
+                                        android:gravity="center_vertical"
+                                        android:paddingHorizontal="8dp"
+                                        android:text="2023"
+                                        android:layout_alignParentEnd="true"
+                                        android:layout_marginTop="12dp"
+                                        android:textColor="@color/white"
+                                        android:textSize="18sp"
+                                        android:layout_marginEnd="30dp"
+                                        tools:ignore="NestedWeights" />
+
 
                                     <ImageView
                                         android:id="@+id/ivProfileImage"
@@ -137,21 +153,9 @@
                                     android:layout_height="0dp"
                                     android:layout_weight="35"
                                     android:orientation="horizontal"
+                                    android:layout_marginStart="12dp"
                                     android:padding="8dp">
 
-
-                                    <TextView
-                                        android:id="@+id/tvYear"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent"
-                                        android:layout_marginStart="8dp"
-                                        android:fontFamily="@font/bebas_kai_regular"
-                                        android:gravity="center_vertical"
-                                        android:paddingHorizontal="8dp"
-                                        android:text="2021"
-                                        android:textColor="@color/red"
-                                        android:textSize="18sp"
-                                        tools:ignore="NestedWeights" />
 
                                     <LinearLayout
                                         android:layout_width="0dp"
@@ -168,7 +172,7 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/bauer_grotesk_pro_demibold"
-                                            android:gravity="center_vertical|end"
+                                            android:gravity="center_vertical|start"
                                             android:text="@string/app_name"
 
                                             android:textColor="@color/black"
@@ -180,7 +184,7 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/source_sans_pro_regular"
-                                            android:gravity="center_vertical|end"
+                                            android:gravity="center_vertical|start"
                                             android:text="123456"
                                             android:textColor="@color/black"
                                             android:textSize="14sp" />
@@ -337,7 +341,7 @@
                             android:layout_height="48dp"
                             android:layout_marginHorizontal="24dp"
                             android:layout_marginBottom="8dp"
-
+android:visibility="gone"
                             android:background="@null"
                             android:backgroundTint="@color/colorPrimary"
                             android:clickable="true"
@@ -352,7 +356,7 @@
                             android:fontFamily="@font/bebas_kai_regular"
                             android:gravity="start"
                             android:text="@string/membership_details"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="16sp"
                             android:textStyle="italic" />
 
@@ -381,7 +385,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="@string/first_name_col"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
                                     <TextView
@@ -392,7 +396,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="---"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
                                 </LinearLayout>
@@ -409,7 +413,7 @@
                                         android:gravity="start"
                                         android:text="@string/last_name_col"
 
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
                                     <TextView
@@ -420,7 +424,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="---"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
                                 </LinearLayout>
@@ -437,7 +441,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="@string/email_col"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
                                     <TextView
@@ -448,7 +452,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="---"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
 
@@ -466,7 +470,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="@string/address_col"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
                                     <TextView
@@ -476,7 +480,7 @@
                                         android:layout_marginStart="3dp"
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
 
@@ -494,7 +498,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="@string/membership_tier_col"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
                                     <TextView
@@ -505,7 +509,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
 
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
 
@@ -522,7 +526,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="@string/mobile_col"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
                                     <TextView
@@ -533,7 +537,7 @@
                                         android:fontFamily="@font/source_sans_pro_bold"
                                         android:gravity="start"
                                         android:text="---"
-                                        android:textColor="@color/colorPrimaryDark"
+                                        android:textColor="@color/colorPrimary"
                                         android:textSize="12sp" />
 
 
